--- a/wiki/fr/TechDraw_ExtensionCreateHorizChamferDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizChamferDimension.html
@@ -55,7 +55,7 @@
 <p>L'outil <b>TechDraw Cote horizontale chanfrein</b> cr&eacute;e une cote horizontale de la dimension et de l'angle pour un chanfrein.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChamferDimensionExample.png&amp;filetimestamp=20211116170520&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChamferDimensionExample.png" decoding="async" width="450" height="129" class="mw-file-element" data-file-width="1023" data-file-height="294"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, la cote cr&eacute;&eacute;e</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125110502
+Cached time: 20260125110513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.154 seconds
+CPU time usage: 0.104 seconds
+Real time usage: 0.159 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 27014/2097152 bytes
-Template argument size: 10758/2097152 bytes
+Post&#8208;expand include size: 27022/2097152 bytes
+Template argument size: 10762/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1628/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.517      1 -total
- 26.47%   10.196      1 Template:TechDraw_Tools_navi/fr
- 18.63%    7.175      2 Template:Navigation_menu_2
- 13.94%    5.370      1 Template:Userdocnavi/fr
-  9.38%    3.614      1 Template:Value
-  9.21%    3.549      2 Template:Docnav/fr
-  9.10%    3.506      1 Template:GuiCommand/fr
-  6.69%    2.575      1 Template:VersionMinus/fr
-  6.15%    2.367      1 Template:Version/fr
-  5.71%    2.201      1 Template:Caption
+100.00%   42.263      1 -total
+ 20.10%    8.493      1 Template:TechDraw_Tools_navi/fr
+ 16.67%    7.044      2 Template:Navigation_menu_2
+ 15.73%    6.647      1 Template:Value
+ 13.85%    5.852      1 Template:Userdocnavi/fr
+  9.18%    3.879      1 Template:Version/fr
+  8.97%    3.789      1 Template:GuiCommand/fr
+  7.75%    3.274      2 Template:Docnav/fr
+  7.07%    2.987      1 Template:Incode
+  6.01%    2.542      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278083-0!canonical and timestamp 20260125110502 and revision id 1743778. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278083-0!canonical and timestamp 20260125110512 and revision id 1743780. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
