--- a/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateVertChamferDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateVertChamferDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungVertikalesFasenma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateVertChamferDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quota Smusso Verticale (56% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateVertChamferDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Wymiar pionowy sfazowania (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -70,14 +70,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateHorizChamferDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateHorizChamferDimension.html" title="TechDraw ExtensionCreateHorizChamferDimension/fr">Cote horizontale chanfrein</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Balloon.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Balloon.html" title="TechDraw Balloon/fr">Bulle</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/fr">Longueur d'arc</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -117,35 +115,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125110709
+Cached time: 20260125110717
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.176 seconds
-Preprocessor visited node count: 381/1000000
-Post&#8208;expand include size: 26648/2097152 bytes
-Template argument size: 10505/2097152 bytes
+CPU time usage: 0.083 seconds
+Real time usage: 0.118 seconds
+Preprocessor visited node count: 380/1000000
+Post&#8208;expand include size: 26777/2097152 bytes
+Template argument size: 10591/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1407/5000000 bytes
+Unstrip post&#8208;expand size: 1408/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.951      1 -total
- 40.85%   25.718      1 Template:TechDraw_Tools_navi/fr
- 20.83%   13.113      1 Template:Userdocnavi/fr
- 16.53%   10.405      2 Template:Navigation_menu_2
-  8.57%    5.394      1 Template:Value
-  5.42%    3.413      3 Template:MenuCommand
-  4.70%    2.960      1 Template:GuiCommand/fr
-  4.30%    2.708      1 Template:Version/fr
-  4.24%    2.671      1 Template:Caption
-  3.98%    2.503      2 Template:Docnav/fr
+100.00%   33.452      1 -total
+ 20.24%    6.772      1 Template:TechDraw_Tools_navi/fr
+ 17.54%    5.869      2 Template:Navigation_menu_2
+ 14.75%    4.935      1 Template:GuiCommand/fr
+ 13.10%    4.384      1 Template:Userdocnavi/fr
+ 10.67%    3.569      1 Template:Value
+  7.86%    2.628      2 Template:Docnav/fr
+  6.99%    2.337      3 Template:MenuCommand
+  6.45%    2.156      1 Template:Caption
+  6.34%    2.121      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125110708 and revision id 1743784. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125110717 and revision id 1743786. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
