--- a/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChamferDimension.html
@@ -11,7 +11,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -22,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: cotes &rarr; Cote verticale et d'angle de chanfrein
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Cote verticale et d'angle de chanfrein
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -51,7 +50,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Cote verticale chanfrein</b> cr&eacute;e une cote verticale de la dimension et de l'angle pour un chanfrein.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimensionExample.png&amp;filetimestamp=20211116170629&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimensionExample.png" decoding="async" width="450" height="131" class="mw-file-element" data-file-width="1026" data-file-height="299"></a></span>
@@ -115,15 +113,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125110717
+Cached time: 20260125110917
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.118 seconds
-Preprocessor visited node count: 380/1000000
-Post&#8208;expand include size: 26777/2097152 bytes
-Template argument size: 10591/2097152 bytes
+CPU time usage: 0.100 seconds
+Real time usage: 0.141 seconds
+Preprocessor visited node count: 379/1000000
+Post&#8208;expand include size: 26797/2097152 bytes
+Template argument size: 10611/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -131,19 +129,19 @@ Unstrip post&#8208;expand size: 1408/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.452      1 -total
- 20.24%    6.772      1 Template:TechDraw_Tools_navi/fr
- 17.54%    5.869      2 Template:Navigation_menu_2
- 14.75%    4.935      1 Template:GuiCommand/fr
- 13.10%    4.384      1 Template:Userdocnavi/fr
- 10.67%    3.569      1 Template:Value
-  7.86%    2.628      2 Template:Docnav/fr
-  6.99%    2.337      3 Template:MenuCommand
-  6.45%    2.156      1 Template:Caption
-  6.34%    2.121      1 Template:VersionMinus/fr
+100.00%   42.163      1 -total
+ 19.05%    8.030      1 Template:TechDraw_Tools_navi/fr
+ 15.49%    6.532      2 Template:Navigation_menu_2
+ 14.21%    5.991      1 Template:Value
+ 12.02%    5.070      1 Template:Userdocnavi/fr
+  9.03%    3.807      2 Template:Docnav/fr
+  8.45%    3.561      2 Template:Button
+  8.12%    3.422      1 Template:GuiCommand/fr
+  7.87%    3.320      1 Template:Version/fr
+  7.64%    3.220      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125110717 and revision id 1743786. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:278093-0!canonical and timestamp 20260125110917 and revision id 1743788. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
